--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     "require": {
         "php": ">=7.1",
         "wataridori/chatwork-sdk": "^0.3.1",
-        "illuminate/http": "~5.7.0|~5.8.0|^6.0|^7.0",
-        "illuminate/support": "~5.7.0|~5.8.0|^6.0|^7.0"
+        "illuminate/http": "~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
+        "illuminate/support": "~5.7.0|~5.8.0|^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "illuminate/contracts": "~5.7.0|~5.8.0|^6.0|^7.0",
+        "illuminate/contracts": "~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^4.8",
         "mockery/mockery": "^0.9.4"
     },
